<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LoginFragment">

    <ImageView
        android:id="@+id/iv_fundo_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/img_splash"
        android:scaleType="fitXY"/>

    <LinearLayout
        android:layout_width="330dp"
        android:layout_height="330dp"
        android:background="@drawable/login_body_shape"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical"
        android:padding="10dp">

        <EditText
            android:layout_marginTop="20dp"
            android:id="@+id/edEmailLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:textColor="@color/verde_text"
            android:inputType="textEmailAddress"/>

        <EditText
            android:id="@+id/edPwdLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_pwd"
            android:textColor="@color/verde_text"
            android:inputType="textPassword"/>

        <CheckBox
            android:id="@+id/cb_remember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remember"
            android:textColor="@color/cinza" />

        <Button
            android:id="@+id/btn_login"
            android:layout_marginTop="60dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/log_in"
            android:backgroundTint="@color/laranja"/>

        <TextView
            android:id="@+id/tv_createAccount"
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/create_account"
            android:textColor="@color/azul_claro"
            android:layout_gravity="center"/>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>