<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.GameCreatorFragment"
    android:background="@drawable/img_splash">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="330dp"
        android:layout_height="330dp"
        android:background="@drawable/login_body_shape"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/edNameGameCreate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:hint="@string/hint_name"
            android:textColor="@color/verde_text" />

        <EditText
            android:id="@+id/edLancamentoCreate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="@string/hint_lancamento"
            android:inputType="textEmailAddress"
            android:textColor="@color/verde_text" />

        <EditText
            android:id="@+id/edDescricaoCreate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="@string/hint_description"
            android:textColor="@color/verde_text" />


        <Button
            android:id="@+id/btn_saveGame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:backgroundTint="@color/laranja"
            android:text="@string/save_game" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/llFotoGame"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/round_shape_foto"
        android:backgroundTint="@color/laranja"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.236"
        android:padding="15dp">

        <ImageView
            android:id="@+id/iv_fotoGameCreate"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/white"
            android:src="@drawable/ic_camera"/>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>